fix nav items overflow on right

--- a/src/style.scss
+++ b/src/style.scss
@@ -64,7 +64,6 @@ a.linkcolor-2c:hover{color:#000000}
   cursor: pointer;
 }
 .nav .nav-content {
-  width: 80%;
   padding: 0rem .2rem;
   margin: 0 auto;
   display: flex;
